--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,7 @@ dependencies {
     implementation 'org.xerial:sqlite-jdbc:3.46.0.1'
 }
 
-jar {
-    exclude('binexport')
-}
+//Test
 
 // Standard Ghidra extension Gradle code follows.
 //----------------------START "DO NOT MODIFY" SECTION------------------------------
